--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-image-lightbox": "^5.1.1",
+    "react-images": "^1.1.7",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
